--- a/assets/sass/components/_sideNav.scss
+++ b/assets/sass/components/_sideNav.scss
@@ -2,7 +2,7 @@
   ul.side-nav {
     position: fixed;
     width: 240px;
-    left: -240px;
+    left: -250px;
     top: 0;
     height: 120%;
     background-color: #FFF;
@@ -36,11 +36,11 @@
 }
 
 #sidenav-overlay {
-  position:absolute;
-  top:0px;
-  left:0px;
-  right:0px;
-  bottom:0px;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
   background-color: rgba(0,0,0,.5);
   z-index: 998;
   
