--- a/views/main.twig
+++ b/views/main.twig
@@ -1,6 +1,6 @@
 {% extends "base.twig" %}
 {% block main %}
-<div class="{{ 'main'|apply_filters( 'maera/section_class/content' ) }}" role="main">
+<div class="main" role="main">
 	{% if title %}<h1>{{ title }}</h1>{% endif %}
 	{% block content %}
 		{{ __( 'Sorry, no content', 'maera' ) }}
