--- a/views/header.twig
+++ b/views/header.twig
@@ -37,14 +37,15 @@
 		<div class="header hero parallax-container">
 			<div class="parallax"><img src="{{ header_img }}"></div>
 			<div class="{{ grid.container() }}">
+				{{ theme_mods.header_content }}
 				<div class="{{ grid.row() }}">
 					<div class="{{ column_classes( [{'tablet':logo_width_tablet},{'medium':logo_width_medium},{'large':logo_width_large}] ) }} header-property-wrap">
 						<h2>{% include 'site-logo.twig' %}</h2>
 					</div>
 					{% if sidebar.header %}
-					<div class="{{ column_classes( [{'tablet':widget_width_tablet},{'medium':widget_width_medium},{'large':widget_width_large}] ) }}">
-						{{ sidebar.header }}
-					</div>
+						<div class="{{ column_classes( [{'tablet':widget_width_tablet},{'medium':widget_width_medium},{'large':widget_width_large}] ) }}">
+							{{ sidebar.header }}
+						</div>
 					{% endif %}
 				</div>
 			</div>
