--- a/assets/sass/components/_buttons.scss
+++ b/assets/sass/components/_buttons.scss
@@ -1,6 +1,3 @@
-$button-height: 36px !default;
-$button-color: color("blue", "base") !default;
-
 // shared styles
 .btn,
 .btn-flat,
@@ -13,7 +10,7 @@ input[type="submit"] {
   margin-bottom: 15px;
   padding: 0 2rem;
   @include border-radius(2px);
-  line-height: 36px;
+  line-height: $button-line-height;
   text-transform: uppercase;
   border:none;
 }
@@ -32,24 +29,22 @@ button:disabled,
 input[type="button"]:disabled,
 input[type="reset"]:disabled,
 input[type="submit"]:disabled {
-  background-color: #DFDFDF;
+  background-color: $button-background-disabled;
   box-shadow: none;
-  color: #9F9F9F;
+  color: $button-color-disabled;
 
   &:hover {
-    background-color: #DFDFDF;
-    color: #9F9F9F;
+    background-color: $button-background-disabled;
+    color: $button-color-disabled;
   }
 }
 // Shared icon styles
 .btn, .btn-floating, .btn-large, .btn-flat {
   i {
-    font-size: 1.3rem;
+    font-size: $button-font-size-shared;
     line-height: inherit;
   }
 }
-
-
 
 // Raised Button
 .btn,
@@ -58,7 +53,7 @@ input[type="button"],
 input[type="reset"],
 input[type="submit"] {
   text-decoration:none;
-  color: #FFFFFF;
+  color: $button-color-raised;
   background-color: $button-color;
   text-align: center;
   letter-spacing: .8px;
@@ -72,15 +67,14 @@ input[type="submit"] {
   }
 }
 
-
 // Floating button
 .btn-floating {
   display: inline-block;
   position: relative;
   z-index: 1;
-  width: 40px;
-  height: 40px;
-  line-height: 40px;
+  width: $button-floating-size;
+  height: $button-floating-size;
+  line-height: $button-floating-size;
   padding: 0;
   background-color: $button-color;
   @include border-radius(50%);
@@ -92,13 +86,20 @@ input[type="submit"] {
     width: inherit;
     display: inline-block;
     text-align: center;
-    color: #fff;
+    color: $button-color-raised;
     font-size: 1.6rem;
-    line-height: 40px;
+    line-height: $button-floating-size;
   }
 
   &:hover {
     @extend .z-depth-1-half;
+  }
+  &.btn-large {
+    width: $button-floating-size * 1.5;
+    height: $button-floating-size * 1.5;
+    i{
+      line-height: $button-floating-size * 1.5;
+    }
   }
 }
 
@@ -106,14 +107,13 @@ input[type="submit"] {
 .btn-flat {
   box-shadow: none;
   background-color: transparent;
-  color: #343434;
+  color: $button-color-flat;
   cursor: pointer;
 
   &.disabled {
     color: lighten(#999, 10%);
   }
 }
-
 
 // Large button
 .btn-large {
