--- a/assets/sass/components/_dropdown.scss
+++ b/assets/sass/components/_dropdown.scss
@@ -1,8 +1,3 @@
-li.divider {
-  height: 1px;
-  overflow: hidden;
-  background-color: color("grey", "lighten-3");
-}
 .dropdown-content {
   display:none;
   @extend .z-depth-1;
@@ -11,6 +6,8 @@ li.divider {
   margin: 0px;
   min-width: 100px;
   z-index: 1000;
+
+  will-change: width, height;
   
   li {
     cursor: pointer;
@@ -18,16 +15,13 @@ li.divider {
     color: $off-black;
     line-height: 1.5rem;
 
+    &:hover {
+      background-color: rgba(0,0,0, .07);
+    }
+
     & > a,& > span {
       display: block;
       padding: 1rem 1rem;
     }
   }
-    
-  @media only screen and (min-width: $large-screen) {
-    li:hover {
-      background-color: rgba(0,0,0, .07)
-    }
-  }
-
 }
