--- a/assets/sass/components/_form.scss
+++ b/assets/sass/components/_form.scss
@@ -1,6 +1,12 @@
-$border-color: color("grey", "base") !default;
-$highlight-color: color("light-blue", "base") !default;
-$label-font-size: .8rem !default;
+/* Remove Focus Boxes */
+select:focus {
+  outline: 1px solid color("materialize-red", "lighten-4");
+}
+button:focus {
+  outline: none;
+  background-color: lighten($button-color, 10%);
+}
+
 
 label {
   font-size: $label-font-size;
@@ -20,6 +26,7 @@ label {
     top: 0.8rem;
     left: $gutter-width / 2;
     font-size: 1rem;
+    cursor: text;
     @include transition(.2s ease-out);
   }
   label.active {
@@ -32,17 +39,54 @@ label {
   input[type=email]:focus + label,
   input[type=date]:focus + label,
   textarea:focus + label {
-  
     color: $highlight-color;
   }
 
-  input[type=text]:valid,
-  input[type=password]:valid,
-  input[type=email]:valid,
-  input[type=date]:valid,
-  textarea:valid {
+  input[type=text].valid,
+  input[type=password].valid,
+  input[type=email].valid,
+  input[type=date].valid,
+  textarea.valid {
     border-bottom: 1px solid color("green", "base");
     @include box-shadow(0 1px 0 0 color("green", "base"));
+  }
+
+  input[type=text].invalid,
+  input[type=password].invalid,
+  input[type=email].invalid,
+  input[type=date].invalid,
+  textarea.invalid {
+    border-bottom: 1px solid color("red", "base");
+    @include box-shadow(0 1px 0 0 color("red", "base"));
+  }
+
+  // Prefix Icons
+  .prefix {
+    position: absolute;
+    width: 3rem;
+    font-size: 2rem;
+    @include transition(color .2s);
+
+    &.active { color: $highlight-color; }
+  }
+  .prefix ~ input {
+    margin-left: 3rem;
+    width: 92%;
+    width: calc(100% - 3rem);
+  }
+  .prefix ~ label { margin-left: 3rem; }
+
+  @media #{$medium-and-down} {
+    .prefix ~ input {
+      width: 86%;
+      width: calc(100% - 3rem);
+    }
+  }
+  @media #{$small-and-down} {
+    .prefix ~ input {
+      width: 80%;
+      width: calc(100% - 3rem);
+    }
   }
 
 }
@@ -95,17 +139,12 @@ textarea {
   Radio Buttons 
 ***************/
 
-$disabled-color: rgba(0,0,0, .26) !default;
-$fill-color: #0f9d58 !default;
-$radio-border: #5a5a5a !default;
-
 /* Remove default checkbox */
 [type="radio"]:not(:checked),
 [type="radio"]:checked {
   position: absolute;
   left: -9999px;
 }
-
 
 [type="radio"]:not(:checked) + label,
 [type="radio"]:checked + label {  
@@ -165,7 +204,7 @@ $radio-border: #5a5a5a !default;
 }
 
 /* Radio With gap */
-[type="radio"]:checked + label:before {
+[type="radio"].with-gap:checked + label:before {
   border-radius: 50%;
   border: 2px solid $fill-color;
 }
@@ -310,7 +349,21 @@ form p {
 }
 
 select { display: none; }
-select.disabled { display: block; }
+select.browser-default { display: block; }
+
+
+// Disabled styles
+select:disabled {
+  color: rgba(0,0,0,.3);
+}
+.select-wrapper span.select-dropdown.disabled {
+  color: rgba(0,0,0,.3);
+}
+.select-dropdown li.disabled {
+  color: rgba(0,0,0,.3);
+
+  &:hover { background-color: transparent; }
+}
 
 
 /***************
@@ -397,10 +450,6 @@ input[type=range]::-webkit-slider-thumb {
   transform-origin: 50% 50%;
   margin: -5px 0 0 0;
   @include transition(.3s);
-}
-.range-field.active input[type=range]::-webkit-slider-thumb {
-  height: 0;
-  width: 0;
 }
 
 input[type=range]:focus::-webkit-slider-runnable-track {
