--- a/assets/sass/components/_global.scss
+++ b/assets/sass/components/_global.scss
@@ -1,26 +1,14 @@
 @charset "UTF-8";
 
-// Media Query Ranges
-$small-screen: 600px !default;
-$medium-screen: 992px !default;
-$large-screen: 1200px !default;
-
-$medium-and-up: "only screen and (min-width : #{$small-screen})";
-$large-and-up: "only screen and (min-width : #{$medium-screen})";
-
-$small-and-down: "only screen and (max-width : #{$small-screen})";
-$medium-and-down: "only screen and (max-width : #{$medium-screen})";
-
-$medium-only: "only screen and (min-width : #{$small-screen}) and (max-width : #{$medium-screen})";
 
 //Default styles
 
-//html {
-//  box-sizing: border-box;
-//}
-//*, *:before, *:after {
-//  box-sizing: inherit;
-//}
+html {
+ box-sizing: border-box;
+}
+*, *:before, *:after {
+ box-sizing: inherit;
+}
 
 body {
   // display: flex;
@@ -62,7 +50,7 @@ a {
   text-align: right
 }
 .center, .center-align {
-  text-align: center; 
+  text-align: center;
 }
 
 .left {
@@ -78,20 +66,12 @@ a {
   margin-right: auto;
 }
 
-
-// Grid Variables
-$num-cols: 12;
-$gutter-width: 1.5rem;
-
 ul {
   padding: 0;
 }
 li {
   list-style-type: none;
 }
-
-$num-cols: 12;
-
 
 // Z-levels
 
@@ -114,7 +94,16 @@ $num-cols: 12;
     @include box-shadow-2(0 27px 24px 0 rgba(0, 0, 0, 0.2), 0 40px 77px 0 rgba(0, 0, 0, 0.22));
 }
 
-//  Blockquote 
+// Dividers
+
+.divider {
+  height: 1px;
+  overflow: hidden;
+  background-color: color("grey", "lighten-2");
+}
+
+
+//  Blockquote
 
 blockquote {
   margin: 20px 0;
@@ -134,6 +123,15 @@ i {
   &.right {
     float: right;
     margin-left: 15px;
+  }
+  &.small {
+    font-size: 2rem;
+  }
+  &.medium {
+    font-size: 4rem;
+  }
+  &.large {
+    font-size: 6rem;
   }
 }
 
@@ -181,42 +179,52 @@ img.responsive-img {
 }
 
 
+// Pushpin
+.pin-top, .pin-bottom {
+  position: relative;
+}
+.pinned {
+  position: fixed;
+}
+
+
+
 // Browser Size Dependent Visibility
 .hide-on-small-only, .hide-on-small-and-down {
   @media #{$small-and-down} {
     display: none !important;
-  } 
+  }
 }
 
 .hide-on-med-and-down {
   @media #{$medium-and-down} {
     display: none !important;
-  } 
+  }
 }
 
 .hide-on-med-and-up {
   @media #{$medium-and-up} {
     display: none !important;
-  } 
+  }
 }
 
 .hide-on-med-only {
   @media only screen and (min-width: $small-screen) and (max-width: $medium-screen) {
-    display: none !important; 
+    display: none !important;
   }
 }
 
 .hide-on-large-only {
   @media #{$large-and-up} {
-    display: none !important; 
+    display: none !important;
   }
 }
 
-// Center text on mobile 
+// Center text on mobile
 .center-on-small-only {
   @media #{$small-and-down} {
     text-align: center;
-  } 
+  }
 }
 
 
@@ -243,26 +251,26 @@ table, th, td {
 table {
   width:100%;
   display: table;
-  
+
   @media #{$small-and-down} {
     thead tr th, tbody tr td {
       text-align: center;
-      
-    } 
+
+    }
   }
-  
+
   &.bordered tr {
     border-bottom: 1px solid #e0e0e0;
   }
-  
+
   &.striped {
     tbody tr:nth-child(odd) {
       background-color: #f2f2f2;
     }
   }
-  
+
   &.hoverable {
-      
+
     tbody tr {
       @include transition(background-color .25s ease);
       &:hover {
@@ -270,11 +278,11 @@ table {
       }
     }
   }
-  
+
   &.centered {
     thead tr th, tbody tr td {
       text-align: center;
-      
+
     }
   }
 
@@ -306,9 +314,9 @@ td, th{
     border-bottom: 1px solid #e0e0e0;
       &:last-child {
         border-bottom: none;
-      } 
+      }
   }
-  
+
   a.collection-item{
     display: block;
     @include transition(.25s);
@@ -317,8 +325,8 @@ td, th{
         background-color: #f2f2f2;
       }
     }
-  }    
-  
+  }
+
   &.with-header {
     .collection-header {
       border-bottom: 1px solid #e0e0e0;
@@ -328,24 +336,24 @@ td, th{
      padding-left: 30px;
     }
   }
-  
+
   .active {
-    @extend .blue.lighten-1;
-    @extend .blue-text.lighten-4;
+    // @extend .blue.lighten-1;
+    // @extend .blue-text.lighten-4;
   }
-  
+
   .secondary-content {		
-    float: right;		
+    float: right;
   }
-  
-  
+
+
   //Pagination
   &.pagination {
     display: inline-block;
-    
+
       ul{
         background-color: transparent;
-        
+
         font-size: 0;
         display: inline-block;
       }
@@ -357,19 +365,19 @@ td, th{
       font-size: 1rem;
 
       a {
-       padding: 0px 5px; 
+       padding: 0px 5px;
       }
       &.active {
-        background-color: color('light-blue', 'base'); 
+        background-color: color('light-blue', 'base');
         color: #FFF;
       }
       &:hover {
         background-color: color('light-blue', 'lighten-5');
       }
     }
-    
+
   }
-  
+
 }
 
 // Badges
