--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -285,3 +285,12 @@ ul.pagination {
 footer {
     overflow-y: hidden;
 }
+
+.navwrapper {
+	.site-name-logo {
+		img {
+			height: 100%;
+			padding: 5px 0;
+		}
+	}
+}
