--- a/assets/sass/components/_dropdown.scss
+++ b/assets/sass/components/_dropdown.scss
@@ -6,9 +6,12 @@
   margin: 0px;
   min-width: 100px;
   z-index: 1000;
+  max-height: 70%;
+  opacity: 0;
+  overflow-y: hidden;
 
   will-change: width, height;
-  
+
   li {
     cursor: pointer;
     font-size: 1.2rem;
@@ -16,7 +19,7 @@
     line-height: 1.5rem;
 
     &:hover {
-      background-color: rgba(0,0,0, .07);
+      background-color: rgba(0,0,0, .06);
     }
 
     & > a,& > span {
