--- a/assets/sass/components/_navbar.scss
+++ b/assets/sass/components/_navbar.scss
@@ -3,8 +3,8 @@ nav {
   @extend .z-depth-1;
   background-color: color("materialize-red", "lighten-2");
   width: 100%;
-  height: 56px;
-  line-height: 56px;
+  height: $navbar-height-mobile;
+  line-height: $navbar-height-mobile;
 
   .nav-wrapper {
     position: relative;
@@ -18,11 +18,12 @@ nav {
     @extend .hide-on-large-only;
     position: relative;
     z-index: 1;
+    height: $navbar-height-mobile;
 
     i {
       font-size: 2.7rem;
-      height: 56px;
-      line-height: 56px;
+      height: $navbar-height-mobile;
+      line-height: $navbar-height-mobile;
     }
   }
 
@@ -32,7 +33,7 @@ nav {
     display: inline-block;
     font-size: 2.1rem;
     padding: 0;
-    
+
     @media #{$medium-and-down} {
       left: 0;
       width: 100%;
@@ -50,7 +51,7 @@ nav {
     margin: 0;
     float: right;
 
-    li { 
+    li {
       float: left;
       padding: 0px;
       @include transition(background-color .3s);
@@ -59,9 +60,9 @@ nav {
         background-color: rgba(0,0,0,.1);
       }
     }
-    a { 
+    a {
       font-size: 1rem;
-      color: #fff; 
+      color: #fff;
       display: block;
       padding: 0px 15px;
     }
@@ -80,7 +81,7 @@ nav {
       padding-left: 2rem;
       @include box-sizing(border-box);
 
-      &:focus, &[type=text]:valid, &[type=password]:valid, 
+      &:focus, &[type=text]:valid, &[type=password]:valid,
       &[type=email]:valid, &[type=date]:valid {
         border: none;
         @include box-shadow(none);
@@ -90,25 +91,39 @@ nav {
       top: 0;
       left: 0;
 
-      i { 
-        color: rgba(255,255,255,.7); 
+      i {
+        color: rgba(255,255,255,.7);
         @include transition(color .3s);
       }
       &.active i { color: #fff; }
-      &.active { 
-        @include transform(translateY(0)); 
+      &.active {
+        @include transform(translateY(0));
       }
     }
 
   }
 
 }
+
+// Fixed Navbar
+.navbar-fixed {
+  position: relative;
+  height: $navbar-height-mobile;
+  z-index: 998;
+
+  nav {
+    position: fixed;
+  }
+}
 @media #{$medium-and-up} {
-  nav, nav .nav-wrapper i, nav a.button-collapse i {
-    height: 64px;
-    line-height: 64px;
+  nav, nav .nav-wrapper i, nav a.button-collapse, nav a.button-collapse i {
+    height: $navbar-height;
+    line-height: $navbar-height;
   }
   nav .nav-wrapper i {
-    font-size: 2rem;    
+    font-size: 2rem;
+  }
+  .navbar-fixed {
+    height: $navbar-height;
   }
 }
