--- a/assets/sass/components/_toast.scss
+++ b/assets/sass/components/_toast.scss
@@ -31,15 +31,15 @@
   max-width:100%;
   height: $toast-height;
   line-height: $toast-height;
-  background-color: #323232;
-  padding: 0px 20px;
+  background-color: $toast-color;
+  padding: 0px 25px;
   font-size: 1.1rem;
   font-weight: 300;
-  color: #FFF;
+  color: $toast-text-color;
 
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
 
   .btn, .btn-flat {
     margin: 0;
