--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -286,13 +286,11 @@ footer {
     overflow-y: hidden;
 }
 
-.navwrapper {
-	.site-name-logo {
-		img {
-			height: 100%;
-			padding: 5px 0;
-		}
-	}
+nav .brand-logo {
+    img {
+        height: 64px;
+        padding: 5px 0;
+    }
 }
 
 .card.no-depth {
