--- a/views/site-logo.twig
+++ b/views/site-logo.twig
@@ -1,6 +1,6 @@
 <a href="{{ site.url }}" class="brand-logo">
 	{% if site_logo.id %}
-		<img src="{{ TimberImage(site_logo.id).src }}" srcset="{{ TimberImage(site_logo.id).src|retina(1) }} 1x, {{ TimberImage(site_logo.id).src|retina(2) }}  2x">
+		<img src="{{ TimberImage(site_logo.id).src }}">
 	{% else %}
 		{{ site.name }}
 	{% endif %}
