--- a/assets/css/maera-materialize.css
+++ b/assets/css/maera-materialize.css
@@ -1613,9 +1613,11 @@
 /*** Global ***/
 /*** Navbar ***/
 /*** SideNav ***/
+/*** Tables ***/
 /*** Toasts ***/
 /*** Typography ***/
 /*** Collections ***/
+/* Progress Bar */
 /*! normalize.css v3.0.1 | MIT License | git.io/normalize */
 /**
  * 1. Set default font family to sans-serif.
@@ -2134,11 +2136,8 @@ table, th, td {
 table {
   width: 100%;
   display: table; }
-  @media only screen and (max-width: 600px) {
-    table thead tr th, table tbody tr td {
-      text-align: center; } }
   table.bordered tr {
-    border-bottom: 1px solid #e0e0e0; }
+    border-bottom: 1px solid #d0d0d0; }
   table.striped tbody tr:nth-child(odd) {
     background-color: #f2f2f2; }
   table.hoverable tbody tr {
@@ -2150,7 +2149,7 @@ table {
     text-align: center; }
 
 thead {
-  border-bottom: 1px solid #878787; }
+  border-bottom: 1px solid #d0d0d0; }
 
 td, th {
   padding: 15px 5px;
@@ -2159,6 +2158,58 @@ td, th {
   vertical-align: middle;
   border-radius: 2px; }
 
+@media only screen and (max-width: 992px) {
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    border-spacing: 0;
+    display: block;
+    position: relative;
+    /* sort out borders */ }
+    table th,
+    table td {
+      margin: 0;
+      vertical-align: top; }
+    table th {
+      text-align: left; }
+    table thead {
+      display: block;
+      float: left; }
+      table thead tr {
+        display: block;
+        padding: 0 10px 0 0; }
+    table tbody {
+      display: block;
+      width: auto;
+      position: relative;
+      overflow-x: auto;
+      white-space: nowrap; }
+      table tbody tr {
+        display: inline-block;
+        vertical-align: top; }
+    table th {
+      display: block;
+      text-align: right; }
+    table td {
+      display: block;
+      min-height: 1.25em;
+      text-align: left; }
+    table tr {
+      padding: 0 10px; }
+    table thead {
+      border: 0;
+      border-right: 1px solid #d0d0d0; }
+    table.bordered th {
+      border-bottom: 0;
+      border-left: 0; }
+    table.bordered td {
+      border-left: 0;
+      border-right: 0;
+      border-bottom: 0; }
+    table.bordered tr {
+      border: 0; }
+    table.bordered tbody tr {
+      border-right: 1px solid #d0d0d0; } }
 .collection {
   background-color: #fff;
   margin: 0.5rem 0 1rem 0;
@@ -2171,6 +2222,9 @@ td, th {
     border-bottom: 1px solid #e0e0e0; }
     .collection .collection-item:last-child {
       border-bottom: none; }
+    .collection .collection-item.active {
+      background-color: #42A5F5;
+      color: #BBDEFB; }
   .collection a.collection-item {
     display: block;
     -webkit-transition: 0.25s;
@@ -2182,9 +2236,6 @@ td, th {
     padding: 10px 20px; }
   .collection.with-header .collection-item {
     padding-left: 30px; }
-  .collection .active {
-    background-color: #42A5F5;
-    color: #BBDEFB; }
   .collection .secondary-content {
     float: right; }
   .collection.pagination {
@@ -2240,6 +2291,90 @@ span.badge {
     width: 100%;
     height: 100%; }
 
+.progress {
+  position: relative;
+  height: 4px;
+  display: block;
+  width: 100%;
+  background-color: #c5ecfe;
+  border-radius: 2px;
+  background-clip: padding-box;
+  margin: 0.5rem 0 1rem 0;
+  overflow: hidden; }
+  .progress .determinate {
+    position: absolute;
+    background-color: inherit;
+    top: 0;
+    bottom: 0;
+    background-color: #03a9f4;
+    -webkit-transition: width 0.3s linear;
+    transition: width 0.3s linear; }
+  .progress .indeterminate {
+    background-color: #03a9f4; }
+    .progress .indeterminate:before {
+      content: '';
+      position: absolute;
+      background-color: inherit;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      -webkit-animation: indeterminate 2.1s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite;
+      -ms-animation: indeterminate 2.1s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite;
+      animation: indeterminate 2.1s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite; }
+    .progress .indeterminate:after {
+      content: '';
+      position: absolute;
+      background-color: inherit;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      -webkit-animation: indeterminate-short 2.1s cubic-bezier(0.165, 0.84, 0.44, 1) infinite;
+      -ms-animation: indeterminate-short 2.1s cubic-bezier(0.165, 0.84, 0.44, 1) infinite;
+      animation: indeterminate-short 2.1s cubic-bezier(0.165, 0.84, 0.44, 1) infinite;
+      -webkit-animation-delay: 1.15s;
+      -ms-animation-delay: 1.15s;
+      animation-delay: 1.15s; }
+
+@-webkit-keyframes $animation-name {
+  0% {
+    left: -35%;
+    right: 100%; }
+  60% {
+    left: 100%;
+    right: -90%; }
+  100% {
+    left: 100%;
+    right: -90%; } }
+@keyframes $animation-name {
+  0% {
+    left: -35%;
+    right: 100%; }
+  60% {
+    left: 100%;
+    right: -90%; }
+  100% {
+    left: 100%;
+    right: -90%; } }
+@-webkit-keyframes $animation-name {
+  0% {
+    left: -200%;
+    right: 100%; }
+  60% {
+    left: 107%;
+    right: -8%; }
+  100% {
+    left: 107%;
+    right: -8%; } }
+@keyframes $animation-name {
+  0% {
+    left: -200%;
+    right: 100%; }
+  60% {
+    left: 107%;
+    right: -8%; }
+  100% {
+    left: 107%;
+    right: -8%; } }
 /*******************
   Utility Classes
 *******************/
@@ -5677,7 +5812,8 @@ label {
    Text Inputs + Textarea
 ****************************/
 .input-field {
-  position: relative; }
+  position: relative;
+  margin-top: 1rem; }
   .input-field label {
     color: #9e9e9e;
     position: absolute;
@@ -5696,20 +5832,26 @@ label {
   .input-field input[type=password]:focus + label,
   .input-field input[type=email]:focus + label,
   .input-field input[type=date]:focus + label,
-  .input-field textarea:focus + label {
+  .input-field input[type=tel]:focus + label,
+  .input-field input[type=number]:focus + label,
+  .input-field textarea:focus.materialize-textarea + label {
     color: #03a9f4; }
   .input-field input[type=text].valid,
   .input-field input[type=password].valid,
   .input-field input[type=email].valid,
   .input-field input[type=date].valid,
-  .input-field textarea.valid {
+  .input-field input[type=tel].valid,
+  .input-field input[type=number].valid,
+  .input-field textarea.materialize-textarea.valid {
     border-bottom: 1px solid #4CAF50;
     box-shadow: 0 1px 0 0 #4CAF50; }
   .input-field input[type=text].invalid,
   .input-field input[type=password].invalid,
   .input-field input[type=email].invalid,
   .input-field input[type=date].invalid,
-  .input-field textarea.invalid {
+  .input-field input[type=tel].invalid,
+  .input-field input[type=number].invalid,
+  .input-field textarea.materialize-textarea.invalid {
     border-bottom: 1px solid #F44336;
     box-shadow: 0 1px 0 0 #F44336; }
   .input-field .prefix {
@@ -5738,17 +5880,23 @@ label {
       width: 80%;
       width: calc(100% - 3rem); } }
 
+textarea {
+  width: 100%;
+  height: 3rem;
+  background-color: transparent; }
+
 input[type=text],
 input[type=password],
 input[type=email],
 input[type=date],
-textarea {
+input[type=tel],
+input[type=number],
+textarea.materialize-textarea {
   background-color: transparent;
   border: none;
   border-bottom: 1px solid #9e9e9e;
   outline: none;
   height: 3rem;
-  width: 100%;
   font-size: 1rem;
   margin: 0 0 15px 0;
   padding: 0;
@@ -5762,11 +5910,13 @@ input[type=text]:focus,
 input[type=password]:focus,
 input[type=email]:focus,
 input[type=date]:focus,
-textarea:focus {
+input[type=tel]:focus,
+input[type=number]:focus,
+textarea:focus.materialize-textarea {
   border-bottom: 1px solid #03a9f4;
   box-shadow: 0 1px 0 0 #03a9f4; }
 
-textarea {
+textarea.materialize-textarea {
   overflow-y: hidden;
   /* prevents scroll bar flash */
   padding: 1.6rem 0;
@@ -5968,6 +6118,68 @@ form p:last-child {
 
 [type="checkbox"]:disabled:not(:checked) + label:hover:before {
   border-color: rgba(0, 0, 0, 0.26); }
+
+.switch,
+.switch * {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none; }
+
+.switch label {
+  cursor: pointer; }
+
+.switch label input[type=checkbox]:first-child {
+  opacity: 0;
+  width: 0;
+  height: 0; }
+
+.switch label input[type=checkbox]:first-child:checked + .lever {
+  background-color: #7bc5be; }
+
+.switch label input[type=checkbox]:first-child:checked + .lever:after {
+  background-color: #009587; }
+
+.switch label .lever,
+.switch label input[type=checkbox][disabled]:first-child + .lever {
+  content: "";
+  display: inline-block;
+  width: 45px;
+  height: 15px;
+  background-color: #818181;
+  border-radius: 15px;
+  margin-right: 10px;
+  -webkit-transition: background 0.3s ease;
+          transition: background 0.3s ease;
+  vertical-align: middle;
+  margin-left: 5px; }
+
+.switch label .lever:after {
+  content: "";
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background-color: #F1F1F1;
+  border-radius: 20px;
+  position: relative;
+  box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.4);
+  left: -5px;
+  top: -2px;
+  -webkit-transition: left 0.3s ease, background 0.3s ease, box-shadow 0.1s ease;
+          transition: left 0.3s ease, background 0.3s ease, box-shadow 0.1s ease; }
+
+.switch label input[type=checkbox][disabled]:first-child + .lever:after,
+.switch label input[type=checkbox][disabled]:checked:first-child + .lever:after {
+  background-color: #BDBDBD; }
+
+input[type=checkbox]:first-child:checked ~ .lever:active:after {
+  box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.4), 0 0 0 15px rgba(0, 149, 135, 0.1); }
+
+input[type=checkbox]:first-child ~ .lever:active:after,
+input[type=checkbox][disabled]:first-child ~ .lever:active:after {
+  box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.4), 0 0 0 15px rgba(0, 0, 0, 0.1); }
+
+.switch label input[type=checkbox]:first-child:checked + .lever:after {
+  left: 30px; }
 
 /***************
   Select Field
