--- a/assets/sass/components/_variables.scss
+++ b/assets/sass/components/_variables.scss
@@ -68,6 +68,10 @@ $navbar-height-mobile: 56px;
 $sidenav-width: 240px;
 
 
+/*** Tables ***/
+$table-border-color: #d0d0d0;
+$table-striped-color: #f2f2f2;
+
 /*** Toasts ***/
 $toast-height: 48px !default;
 $toast-color: #323232 !default;
@@ -94,3 +98,6 @@ $collection-bg-color: #fff !default;
 $collection-active-bg-color: color("blue", "lighten-1") !default;
 $collection-active-color: color("blue", "lighten-4") !default;
 $collection-hover-bg-color: rgba(0,0,0,.08) !default;
+
+/* Progress Bar */
+$progress-bar-color: color("light-blue", "base");
