why were dropdowns hidden???

--- a/assets/sass/components/_form.scss
+++ b/assets/sass/components/_form.scss
@@ -428,7 +428,7 @@ input[type=checkbox][disabled]:first-child ~ .lever:active:after {
   }
 }
 
-select { display: none; }
+// select { display: none; }
 select.browser-default { display: block; }
 
 
