mosty CSS fixes

--- a/assets/css/maera-materialize.css
+++ b/assets/css/maera-materialize.css
@@ -7944,3 +7944,13 @@ nav .brand-logo img {
 
 .card.no-depth {
   box-shadow: none; }
+
+.transparent {
+  background: none;
+  background-color: none;
+  background: transparent;
+  background-color: transparent; }
+
+.page-footer,
+.page-footer a {
+  color: #fff; }
